# swagger.yaml
@@ -15,7 +15,7 @@ definitions:
         type: integer
         x-go-name: Status
     type: object
-    x-go-package: casapioggia/controllers
+    x-go-package: casaumidita/controllers
   CommonSuccess:
     properties:
       message:
@@ -32,11 +32,11 @@ definitions:
         type: integer
         x-go-name: Status
     type: object
-    x-go-package: casapioggia/controllers
-  GetRain:
+    x-go-package: casaumidita/controllers
+  GetHumidities:
     properties:
       data:
-        $ref: '#/definitions/Rain'
+        $ref: '#/definitions/Humidities'
       message:
         description: |-
           Message of the response
@@ -51,11 +51,11 @@ definitions:
         type: integer
         x-go-name: Status
     type: object
-    x-go-package: casapioggia/controllers
-  GetRains:
+    x-go-package: casaumidita/controllers
+  GetHumidity:
     properties:
       data:
-        $ref: '#/definitions/Rains'
+        $ref: '#/definitions/Humidity'
       message:
         description: |-
           Message of the response
@@ -70,8 +70,13 @@ definitions:
         type: integer
         x-go-name: Status
     type: object
-    x-go-package: casapioggia/controllers
-  Rain:
+    x-go-package: casaumidita/controllers
+  Humidities:
+    items:
+      $ref: '#/definitions/Humidity'
+    type: array
+    x-go-package: casaumidita/models
+  Humidity:
     properties:
       data_inserimento:
         description: |-
@@ -89,82 +94,70 @@ definitions:
         x-go-name: Id
       valore:
         description: |-
-          Value of rain
+          Value of Humidity
           in: int
-        format: int64
-        type: integer
+        format: float
+        type: number
         x-go-name: Value
     type: object
-    x-go-package: casapioggia/models
-  Rains:
-    items:
-      $ref: '#/definitions/Rain'
-    type: array
-    x-go-package: casapioggia/models
-  ReqAddRain:
+    x-go-package: casaumidita/models
+  ReqAddHumidity:
     properties:
       valore:
         description: |-
-          Value of the rain
+          Value of the Humidity
           in: int
         format: int64
         type: integer
         x-go-name: Value
     type: object
-    x-go-package: casapioggia/models
+    x-go-package: casaumidita/models
 info:
-  title: 'Rain Api:'
-  version: 0.1.3
+  title: 'Humidity Api:'
+  version: 0.1.1
 paths:
+  /humidities:
+    get:
+      description: Get humidity list
+      operationId: listhumidity
+      responses:
+        "200":
+          description: GetHumidities
+          schema:
+            $ref: '#/definitions/GetHumidities'
+        "401":
+          description: CommonError
+          schema:
+            $ref: '#/definitions/CommonError'
+      security:
+      - apiKey:
+        - '[]'
+  /humidity:
+    post:
+      description: Create a new humidity value
+      operationId: addHumidity
+      responses:
+        "200":
+          description: GetHumidity
+          schema:
+            $ref: '#/definitions/GetHumidity'
+        "401":
+          description: CommonError
+          schema:
+            $ref: '#/definitions/CommonError'
+      security:
+      - apiKey:
+        - '[]'
   /lasthour:
     get:
-      description: Get list of last hour of rain .... or the last value inserted
-      operationId: listRain
+      description: Get list of last hour of humidity values .... or the last value
+        inserted
+      operationId: lastHour
       responses:
         "200":
-          description: GetRains
+          description: GetHumidities
           schema:
-            $ref: '#/definitions/GetRains'
-        "401":
-          description: CommonError
-          schema:
-            $ref: '#/definitions/CommonError'
-      security:
-      - apiKey:
-        - '[]'
-  /rain:
-    post:
-      description: Create a new rain value
-      operationId: addRain
-      parameters:
-      - description: 'name: body'
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/ReqAddRain'
-        x-go-name: Body
-      responses:
-        "200":
-          description: GetRain
-          schema:
-            $ref: '#/definitions/GetRain'
-        "401":
-          description: CommonError
-          schema:
-            $ref: '#/definitions/CommonError'
-      security:
-      - apiKey:
-        - '[]'
-  /rains:
-    get:
-      description: Get rains list
-      operationId: listRain
-      responses:
-        "200":
-          description: GetRains
-          schema:
-            $ref: '#/definitions/GetRains'
+            $ref: '#/definitions/GetHumidities'
         "401":
           description: CommonError
           schema:
